# lnn-katago

./: .gitignore  game.py  generate_self_play.py  generate_self_play_test.py  lnn_zero.py  lnn_zero_test.py  main.py  mcts.py  mcts_test.py  pyproject.toml  train.py
