[tool.poetry]
name = "lnnkatago"
version = "0.1.0"
description = ""
authors = ["lindentree"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.16"
numpy = "^2.2.2"
pytest = "^8.3.4"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

